# cmp_string_find

./: CHANGELOG.md  Cargo.toml  Makefile  README.md
benches/: bench-find-glob.rs  bench-find-regex.rs  bench-find-string.rs  bench-match-glob.rs  bench-match-regex.rs  bench-match-string.rs  create_data.rs
src/: bin-match-string.rs  lib.rs
tests/: test.rs
xtask/src/: shape_benchmark_results.rs
