[package]
name = "cmp_string_find"
version = "0.1.6"
authors = ["aki <aki.akaguma@hotmail.com>"]
edition = "2018"
description = "research: comparing string match of rust"
keywords = ["polymorphism"]
categories = ["rust-patterns"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]

[dependencies]
anyhow = "1.0"

twoway = "=0.2"
aho-corasick = "=0.7"
memchr = "=2.4"      # sse2
memmem = "=0.1"      # two way
#sliceslice = "=0.3"  # avx2
libc = "=0.2"

regex = "=1.5"
fancy-regex = "=0.5"
onig = "=6.1"        # Oniguruma, ruby compatible
pcre2 = "=0.2"       # perl compatible

glob = "=0.3"
capturing-glob = "=0.1"
globset = "=0.4"
globber = "=0.1"

[dev-dependencies]
memx-cdy = "0.1"
criterion = "0.3"
criterion-cycles-per-byte = "0.1"

[workspace]
members = [
    "xtask",
]

[[bench]]
name = "bench-find-string"
path = "benches/bench-find-string.rs"
harness = false

[[bench]]
name = "bench-find-regex"
path = "benches/bench-find-regex.rs"
harness = false

[[bench]]
name = "bench-find-glob"
path = "benches/bench-find-glob.rs"
harness = false

#[[bin]]
#name = "bin-match-string"
#path = "src/bin-match-string.rs"
